# superkick

./: .claude-agent.yml.example  .env.example  .gitignore  .oxfmtrc.json  .oxlintrc.json  AGENTS.md  CLAUDE.md  Cargo.toml  Justfile  LICENSE  README.md  lefthook.yml  package.json  pnpm-lock.yaml  repos.yml  repos.yml.example  skills-lock.json  tsconfig.json
.claude/commands/: pr-description.md
.claude/skills/: rust-axum-sqlx
.claude/skills/pr-description/: SKILL.md
.claude/skills/pre-commit-review/: SKILL.md
.claude/skills/pre-pr-review/: SKILL.md
.claude/skills/ship/: skill.md
.claude/skills/test-instructions/: skill.md
.claude/skills/ticket-execute/: SKILL.md
.claude/skills/ticket-plan/: SKILL.md
.claude/skills/ticket-triage/: SKILL.md
.github/workflows/: ci.yml
cloudflare/: worker.ts  wrangler.toml
crates/superkick-api/: Cargo.toml
crates/superkick-api/src/: error.rs  lib.rs  main.rs  recovery_scheduler.rs
crates/superkick-api/src/handlers/: attention.rs  console.rs  dashboard.rs  events.rs  health.rs  interrupts.rs  issues.rs  launch_queue.rs  mod.rs  ownership.rs  queue_common.rs  runs.rs  runtimes.rs  sessions.rs  terminal.rs
crates/superkick-api/src/handlers/launch_queue/: blockers.rs  merge.rs  routes.rs  wire.rs
crates/superkick-api/tests/: recovery_scheduler.rs
crates/superkick-cli/: Cargo.toml
crates/superkick-cli/src/: cancel.rs  doctor.rs  init.rs  main.rs  net.rs  run.rs  serve.rs  status.rs
crates/superkick-config/: Cargo.toml
crates/superkick-config/src/: lib.rs  model.rs  repo_slug.rs  tests.rs  validate.rs
crates/superkick-core/: Cargo.toml
crates/superkick-core/src/: agent.rs  artifact.rs  attach.rs  attention.rs  blocker.rs  console.rs  error.rs  event.rs  handoff.rs  id.rs  interrupt.rs  issue_event.rs  launch_queue.rs  lib.rs  linear_context.rs  mcp_policy.rs  ownership.rs  protocol.rs  pull_request.rs  queue.rs  recovery.rs  review.rs  role_router.rs  run.rs  runtime.rs  session_lifecycle.rs  step.rs  transcript.rs  workspace_event.rs
crates/superkick-core/tests/: state_transitions.rs
crates/superkick-integrations/: Cargo.toml
crates/superkick-integrations/src/: lib.rs
crates/superkick-integrations/src/github/: mod.rs
crates/superkick-integrations/src/linear/: client.rs  context.rs  error.rs  mod.rs  types.rs
crates/superkick-integrations/src/linear/types/: contract.rs  convert.rs  graphql.rs  mod.rs  tests.rs
crates/superkick-runtime/: Cargo.toml
crates/superkick-runtime/src/: agent_supervisor.rs  attention_service.rs  detector.rs  git.rs  handoff_service.rs  heartbeat.rs  interrupt_service.rs  lib.rs  linear_context.rs  mcp_policy.rs  orchestrator.rs  ownership_service.rs  pty_session.rs  repo_cache.rs  session_bus.rs  step_engine.rs  workspace_bus.rs  worktree.rs
crates/superkick-runtime/src/agent_supervisor/: lifecycle.rs  mod.rs  output.rs  process.rs
crates/superkick-runtime/src/protocol_adapter/: claude.rs  claude_stream.rs  mod.rs  stub.rs
crates/superkick-runtime/src/step_engine/: agent.rs  budget.rs  commands.rs  create_pr.rs  mod.rs  prepare.rs  review_swarm.rs
crates/superkick-runtime/tests/: claude_protocol.rs  runtime_detector.rs
crates/superkick-storage/: Cargo.toml
crates/superkick-storage/migrations/: 001_initial_schema.sql  002_launch_profile.sql  003_active_run_dedup.sql  004_active_run_dedup_issue_identifier.sql  005_pull_requests.sql  005_run_use_worktree.sql  006_execution_mode.sql  007_terminal_transcripts.sql  008_attention_requests.sql  009_agent_session_linear_context.sql  010_child_handoffs_and_session_lineage.sql  011_session_ownership.sql  012_session_lifecycle_events.sql  013_issue_blockers.sql  014_run_budget_and_pause.sql  015_run_budget_grant.sql  016_run_heartbeat_recovery.sql  017_runtime_registry.sql  018_agent_session_tool_policy.sql
crates/superkick-storage/src/: db.rs  lib.rs  repo.rs
crates/superkick-storage/src/sqlite/: agent_sessions.rs  artifacts.rs  attention_requests.rs  codec.rs  events.rs  handoffs.rs  interrupts.rs  issue_blockers.rs  mod.rs  pull_requests.rs  recovery.rs  runs.rs  runtimes.rs  session_lifecycle.rs  session_ownership.rs  steps.rs  transcripts.rs
crates/superkick-storage/tests/: sqlite_integration.rs
docs/: agent-catalog.md  architecture-schema.md  codex-workflow.md  dashboard-home-structure.md  dashboard-visual-directions.md  implementation-plan.md  iteration-2-launch-plan.md  launch-execution-context.md  local-setup.md  product-context.md  target-architecture.md  v1-spec.md
docs/conventions/: frontend.md  rust.md  testing.md  visual-design.md  workflow.md
docs/product/: issue-run-state.md  unblock-flow.md
docs/runtime/: mcp-policy.md
docs/stories/: README.md  SK-STORY-001-machine-setup-and-doctor.md  SK-STORY-002-repo-init-and-project-registration.md  SK-STORY-003-cli-distribution.md  SK-STORY-003-local-service-and-dashboard-entry.md  SK-STORY-004-manual-run-from-cli.md  SK-STORY-005-multi-session-rail-and-quick-switching.md  SK-STORY-006-cli-distribution.md
docs/superpowers/plans/: 2026-03-28-sk-issue-004-runtime-health-cancellation.md  2026-03-28-ui-architecture-refactor.md  2026-03-29-eng-001-agent-rules-skills-hardening.md  2026-03-29-sk-005-reliable-demo-path.md
docs/superpowers/specs/: 2026-03-28-sk-issue-004-runtime-health-cancellation-design.md  2026-03-29-eng-001-agent-rules-skills-hardening-design.md  2026-03-29-sk-005-reliable-demo-path-design.md  2026-04-15-sup-46-child-handoffs-design.md  2026-04-16-ui-types-consolidation-design.md
examples/: demo.sh  smoke-test.sh  superkick.multi-mcp.yaml  superkick.yaml
src/server/: dashboardHtml.ts  dashboardRoute.ts  index.ts  webhookRoute.ts
src/shared/: env.ts  logs.ts  types.ts
src/temporal/: worker.ts
src/temporal/activities/: config.ts  github.ts  index.ts  linear.ts  logStep.ts  repo.ts  slack.ts
src/temporal/workflows/: issueWorkflow.ts
ui/: README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
ui/src/: App.tsx  api.ts  index.css  main.tsx  router.tsx  types.ts
(+319 files in other folders)
