[workspace]
members = [
    "crates/superkick-api",
    "crates/superkick-cli",
    "crates/superkick-config",
    "crates/superkick-core",
    "crates/superkick-integrations",
    "crates/superkick-runtime",
    "crates/superkick-storage",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = { version = "0.8", features = ["ws"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
tokio-util = { version = "0.7", features = ["rt"] }
portable-pty = "0.8"
libc = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
regex = "1"
which = "7"
futures-util = "0.3"
