[package]
name = "superkick-api"
edition.workspace = true
version.workspace = true

[dependencies]
superkick-config = { path = "../superkick-config" }
superkick-core = { path = "../superkick-core" }
superkick-storage = { path = "../superkick-storage" }
superkick-runtime = { path = "../superkick-runtime" }
superkick-integrations = { path = "../superkick-integrations" }
axum.workspace = true
tokio.workspace = true
tokio-stream = "0.1"
async-stream = "0.3"
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
tokio-util.workspace = true
futures-util.workspace = true
bytes = "1"
dotenvy = "0.15"
indexmap = { version = "2", features = ["serde"] }

[dev-dependencies]
sqlx.workspace = true
