[package]
name = "superkick-cli"
edition.workspace = true
version.workspace = true
license.workspace = true

[[bin]]
name = "superkick"
path = "src/main.rs"

[dependencies]
superkick-api = { path = "../superkick-api" }
superkick-config = { path = "../superkick-config" }
clap = { version = "4", features = ["derive"] }
anyhow.workspace = true
serde_json.workspace = true
ureq = "3"
ctrlc = "3"
tokio.workspace = true
tracing-subscriber.workspace = true
which = "7"
