[package]
name = "superkick-runtime"
edition.workspace = true
version.workspace = true

[dependencies]
superkick-core = { path = "../superkick-core" }
superkick-config = { path = "../superkick-config" }
superkick-storage = { path = "../superkick-storage" }
tokio.workspace = true
anyhow.workspace = true
chrono.workspace = true
tracing.workspace = true
uuid.workspace = true
serde_json.workspace = true
tokio-util.workspace = true
