[package]
name = "superkick-storage"
edition.workspace = true
version.workspace = true

[dependencies]
superkick-core = { path = "../superkick-core" }
sqlx.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
